revert(scoreboard): roll back PacketEvents rewrite, restore FastBoard/NMS
Reverts the scoreboard system to its state before bf9bfd6 and 8f52581.
The PacketEvents-based rewrite did not fix the reported invisible-sidebar
issue after two rounds of bug fixes, so restoring the previous
FastBoard/NMS-reflection implementation that was known to work.

Restored:
- scoreboard/fastboard/{FastBoardBase,FastReflection}
- scoreboard/renderer/{ComponentScoreboardRenderer,FastBoardComponent,
  FastBoardComponentAdapter,ScoreboardRenderer}
- scoreboard/instance/InstanceLifecycle
- scoreboard/model/ScoreboardData
- database/serialization/builtin/ScoreboardDataSerializer
- visual/config/serializer/ScoreboardConfigSerializer

Removed (introduced by the rewrite):
- scoreboard/protocol/{PacketScoreboardSender,PacketScoreboardSupport}
- scoreboard/render/ScoreboardRenderer (PacketEvents renderer)
- scoreboard/config/serializer/ScoreboardConfigSerializer (dup, wrong pkg)
- scoreboard/integration/{TabIntegration,TabScoreboardHook} added on top
  of the rewrite

This revert does not touch unrelated changes from bf9bfd6 (database
cache/redis, hologram renderer, loot picker/editor, sequence executor,
loader plugin, effect module) which remain in place.