@@ -9,57 +9,39 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.stream.IntStream;
 
-public final class ScoreboardBuilder {
+public class ScoreboardBuilder {
 
-    private String id;
     private String title = "";
     private final List<String> lines = new ArrayList<>();
     private long updateInterval = 20L;
-    private boolean smartUpdate = true;
-    private boolean cacheEnabled = true;
     private boolean enabled = true;
 
     public static ScoreboardBuilder create() {
         return new ScoreboardBuilder();
     }
 
-    public ScoreboardBuilder id(String id) {
-        this.id = id;
-        return this;
-    }
-
     public ScoreboardBuilder title(String title) {
-        this.title = title == null ? "" : title;
+        this.title = title != null ? title : "";
         return this;
     }
 
     public ScoreboardBuilder line(String line) {
-        if (line != null) lines.add(line);
+        if (line != null) this.lines.add(line);
         return this;
     }
 
     public ScoreboardBuilder lines(String... lines) {
-        if (lines != null) Arrays.stream(lines).filter(java.util.Objects::nonNull).forEach(this.lines::add);
+        if (lines != null) this.lines.addAll(Arrays.asList(lines));
         return this;
     }
 
     public ScoreboardBuilder lines(List<String> lines) {
-        if (lines != null) lines.stream().filter(java.util.Objects::nonNull).forEach(this.lines::add);
+        if (lines != null) this.lines.addAll(lines);
         return this;
     }
 
     public ScoreboardBuilder updateInterval(long ticks) {
         this.updateInterval = Math.max(1L, ticks);
-        return this;
-    }
-
-    public ScoreboardBuilder smartUpdate(boolean smartUpdate) {
-        this.smartUpdate = smartUpdate;
-        return this;
-    }
-
-    public ScoreboardBuilder cacheEnabled(boolean cacheEnabled) {
-        this.cacheEnabled = cacheEnabled;
         return this;
     }
 
@@ -70,25 +52,21 @@ public final class ScoreboardBuilder {
 
     public Scoreboard build() {
         validate();
+
         List<ScoreboardLine> scoreboardLines = IntStream.range(0, lines.size())
                 .mapToObj(i -> ScoreboardLine.of(i, lines.get(i)))
                 .toList();
 
-        var builder = Scoreboard.builder()
+        return Scoreboard.builder()
                 .title(title)
                 .lines(scoreboardLines)
-                .updateConfig(UpdateConfig.builder()
-                        .updateInterval(updateInterval)
-                        .smartUpdate(smartUpdate)
-                        .cacheEnabled(cacheEnabled)
-                        .build())
-                .enabled(enabled);
-        if (id != null && !id.isBlank()) builder.id(id);
-        return builder.build();
+                .updateConfig(UpdateConfig.builder().updateInterval(updateInterval).build())
+                .enabled(enabled)
+                .build();
     }
 
     private void validate() {
-        if (title == null || title.isBlank()) {
+        if (title == null || title.trim().isEmpty()) {
             throw new IllegalArgumentException("Scoreboard title cannot be null or empty");
         }
         if (lines.isEmpty()) {
